--- a/dashboard/templates/Mueller_1_0_0/index.html
+++ b/dashboard/templates/Mueller_1_0_0/index.html
@@ -168,12 +168,10 @@
                     </section>
                     <!-- end s-services -->
                 {% elif section.name == 'folio' %}
-                    <!-- portfolio            ----------------------------------------------- -->
+                    <!-- portfolio ----------------------------------------------- -->
                     <section id="folio" class="s-folio target-section">
                       <div class="row section-header light-on-dark" data-num="3">
-                        <h3 class="column lg-12 section-header__pretitle text-pretitle">
-                          Recent Works
-                        </h3>
+                        <h3 class="column lg-12 section-header__pretitle text-pretitle">Recent Works</h3>
                         <div class="column lg-6 stack-on-1100 section-header__primary">
                           <h2 class="title text-display-1">
                             Here are some of our favorite projects we have done lately. Feel
@@ -182,9 +180,9 @@
                         </div>
                         <div class="column lg-6 stack-on-1100 section-header__secondary">
                           <p class="desc">
-                            Quia iusto totam facilis ut atque quidem quis maiores iure.
-                            Facilis mollitia enim illo sed et totam commodi. Velit a
-                            recusandae sequi consequatur est dolorum eaque.
+                            Quia iusto totam facilis ut atque quidem quis maiores iure. Facilis
+                            mollitia enim illo sed et totam commodi. Velit a recusandae sequi
+                            consequatur est dolorum eaque.
                           </p>
                         </div>
                       </div>
@@ -195,266 +193,44 @@
                           <div class="bricks-wrapper">
                             <div class="grid-sizer"></div>
 
-                            <article class="brick brick--double entry">
-                              <a href="#modal-01" class="entry__link">
-                                <div class="entry__thumb">
-                                  <img
-                                    src="{% static 'images/folio/white_turban@2x.jpg' %}"
-                                    alt=""
-                                  />
-                                </div>
-                                <div class="entry__info">
-                                  <div class="entry__cat">Frontend Design</div>
-                                  <h4 class="entry__title">White Turban</h4>
-                                </div>
-                              </a>
-                            </article>
-                            <!-- entry -->
-
-                            <article class="brick brick--double entry">
-                              <a href="#modal-02" class="entry__link">
-                                <div class="entry__thumb">
-                                  <img
-                                    src="{% static 'images/folio/caffeine_and_tulips@2x.jpg' %}"
-                                    alt=""
-                                  />
-                                </div>
-                                <div class="entry__info">
-                                  <div class="entry__cat">Brand Identity</div>
-                                  <h4 class="entry__title">Caffeine & Tulips</h4>
-                                </div>
-                              </a>
-                            </article>
-                            <!-- entry -->
-
-                            <article class="brick entry">
-                              <a href="#modal-03" class="entry__link">
-                                <div class="entry__thumb">
-                                  <img
-                                    src="{% static 'images/folio/grayscale@2x.jpg' %}"
-                                    alt=""
-                                  />
-                                </div>
-                                <div class="entry__info">
-                                  <div class="entry__cat">Product Design</div>
-                                  <h4 class="entry__title">Grayscale</h4>
-                                </div>
-                              </a>
-                            </article>
-                            <!-- entry -->
-
-                            <article class="brick entry">
-                              <a href="#modal-04" class="entry__link">
-                                <div class="entry__thumb">
-                                  <img
-                                    src="{% static 'images/folio/lamp@2x.jpg' %}"
-                                    alt=""
-                                  />
-                                </div>
-                                <div class="entry__info">
-                                  <div class="entry__cat">E-Commerce</div>
-                                  <h4 class="entry__title">Lamp</h4>
-                                </div>
-                              </a>
-                            </article>
-                            <!-- entry -->
-
-                            <article class="brick entry">
-                              <a href="#modal-05" class="entry__link">
-                                <div class="entry__thumb">
-                                  <img
-                                    src="{%static 'images/folio/tropical@2x.jpg' %}"
-                                    alt=""
-                                  />
-                                </div>
-                                <div class="entry__info">
-                                  <div class="entry__cat">Frontend Design</div>
-                                  <h4 class="entry__title">Tropical</h4>
-                                </div>
-                              </a>
-                            </article>
-                            <!-- entry -->
-
-                            <article class="brick entry">
-                              <a href="#modal-06" class="entry__link">
-                                <div class="entry__thumb">
-                                  <img
-                                    src="{% static 'images/folio/woodcraft@2x.jpg'%} "
-                                    alt=""
-                                  />
-                                </div>
-                                <div class="entry__info">
-                                  <div class="entry__cat">E-Commerce</div>
-                                  <h4 class="entry__title">Woodcraft</h4>
-                                </div>
-                              </a>
-                            </article>
-                            <!-- entry -->
+                            {% for work in works %}
+                              <article class="brick entry">
+                                <a href="#modal-{{ work.id }}" class="entry__link">
+                                  <div class="entry__thumb">
+                                    <img src="/media/{{ work.img }}" alt="{{ work.name }}"/>
+                                  </div>
+                                  <div class="entry__info">
+                                    <div class="entry__cat">{{ work.tags }}</div>
+                                    <h4 class="entry__title">{{ work.name }}</h4>
+                                  </div>
+                                </a>
+                              </article>
+                            {% endfor %}
                           </div>
-                          <!-- end bricks-wrapper -->
-                        </div>
-                        <!-- end masonry -->
-                      </div>
-                      <!-- end bricks -->
-
-                      <!-- modal templates popup                -------------------------------------------- -->
-                      <div id="modal-01" hidden>
-                        <div class="modal-popup">
-                          <img
-                            src="{% static 'images/folio/gallery/g-turban.jpg' %}"
-                            alt=""
-                          />
-
-                          <div class="modal-popup__desc">
-                            <h5>White Turban</h5>
-                            <p>
-                              Odio soluta enim quos sit asperiores rerum rerum repudiandae
-                              cum. Vel voluptatem alias qui assumenda iure et expedita
-                              voluptatem. Ratione officiis quae.
-                            </p>
-                            <ul class="modal-popup__cat">
-                              <li>UX Research</li>
-                              <li>Frontend Design</li>
-                            </ul>
-                          </div>
-
-                          <a href="https://www.behance.net/" class="modal-popup__details"
-                            >Project link</a
-                          >
                         </div>
                       </div>
-                      <!-- end modal -->
 
-                      <div id="modal-02" hidden>
-                        <div class="modal-popup">
-                          <img
-                            src="{% static 'images/folio/gallery/g-tulips.jpg' %}"
-                            alt=""
-                          />
+                      <!-- modal templates popup -------------------------------------------- -->
+                      {% for work in works %}
+                        <div id="modal-{{ work.id }}" hidden>
+                          <div class="modal-popup">
+                            <img src="/media/{{ work.img }}" alt="{{ work.name }}" class="image-fixed-size-work" />
 
-                          <div class="modal-popup__desc">
-                            <h5>Caffeine & Tulips</h5>
-                            <p>
-                              Proin gravida nibh vel velit auctor aliquet. Aenean
-                              sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                              ipsum, nec sagittis sem nibh id elit.
-                            </p>
-                            <ul class="modal-popup__cat">
-                              <li>Brand Identity</li>
-                            </ul>
+                            <div class="modal-popup__desc">
+                              <h5>{{ work.name }}</h5>
+                              <p>{{ work.description }}</p>
+                              <ul class="modal-popup__cat">
+                                <li>{{ work.tags }}</li>
+                              </ul>
+                            </div>
+
+                            <a href="{{ work.link }}" class="modal-popup__details" target="_blank">
+                              Project link
+                            </a>
                           </div>
-
-                          <a href="https://www.behance.net/" class="modal-popup__details"
-                            >Project link</a
-                          >
                         </div>
-                      </div>
-                      <!-- end modal -->
-
-                      <div id="modal-03" hidden>
-                        <div class="modal-popup">
-                          <img
-                            src="{% static 'images/folio/gallery/g-grayscale.jpg' %}"
-                            alt=""
-                          />
-
-                          <div class="modal-popup__desc">
-                            <h5>Grayscale</h5>
-                            <p>
-                              Exercitationem reprehenderit quod explicabo consequatur
-                              aliquid ut magni ut. Deleniti quo corrupti illum velit eveniet
-                              ratione necessitatibus ipsam mollitia.
-                            </p>
-                            <ul class="modal-popup__cat">
-                              <li>Product Design</li>
-                            </ul>
-                          </div>
-
-                          <a href="https://www.behance.net/" class="modal-popup__details"
-                            >Project link</a
-                          >
-                        </div>
-                      </div>
-                      <!-- end modal -->
-
-                      <div id="modal-04" hidden>
-                        <div class="modal-popup">
-                          <img
-                            src="{% static 'images/folio/gallery/g-lamp.jpg' %}"
-                            alt=""
-                          />
-
-                          <div class="modal-popup__desc">
-                            <h5>The Lamp</h5>
-                            <p>
-                              Dolores velit qui quos nobis. Aliquam delectus voluptas quos
-                              possimus non voluptatem voluptas voluptas. Est doloribus
-                              eligendi porro doloribus voluptatum.
-                            </p>
-                            <ul class="modal-popup__cat">
-                              <li>E-Commerce</li>
-                            </ul>
-                          </div>
-
-                          <a href="https://www.behance.net/" class="modal-popup__details"
-                            >Project link</a
-                          >
-                        </div>
-                      </div>
-                      <!-- end modal -->
-
-                      <div id="modal-05" hidden>
-                        <div class="modal-popup">
-                          <img
-                            src="{% static 'images/folio/gallery/g-tropical.jpg' %}"
-                            alt=""
-                          />
-
-                          <div class="modal-popup__desc">
-                            <h5>Tropical</h5>
-                            <p>
-                              Proin gravida nibh vel velit auctor aliquet. Aenean
-                              sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                              ipsum, nec sagittis sem nibh id elit.
-                            </p>
-                            <ul class="modal-popup__cat">
-                              <li>Frontend Design</li>
-                            </ul>
-                          </div>
-
-                          <a href="https://www.behance.net/" class="modal-popup__details"
-                            >Project link</a
-                          >
-                        </div>
-                      </div>
-                      <!-- end modal -->
-
-                      <div id="modal-06" hidden>
-                        <div class="modal-popup">
-                          <img
-                            src="{% static 'images/folio/gallery/g-woodcraft.jpg' %}"
-                            alt=""
-                          />
-
-                          <div class="modal-popup__desc">
-                            <h5>Woodcraft</h5>
-                            <p>
-                              Quisquam vel libero consequuntur autem voluptas. Qui aut vero.
-                              Omnis fugit mollitia cupiditate voluptas. Aenean sollicitudin,
-                              lorem quis bibendum auctor.
-                            </p>
-                            <ul class="modal-popup__cat">
-                              <li>E-Commerce</li>
-                              <li>Product Design</li>
-                            </ul>
-                          </div>
-
-                          <a href="https://www.behance.net/" class="modal-popup__details"
-                            >Project link</a
-                          >
-                        </div>
-                      </div>
-                      <!-- end modal -->
+                      {% endfor %}
+                      <!-- end modals -->
 
                       <!-- clients                -------------------------------------------- -->
                       <div class="s-clients row">
